# aiohttp_client

./: .gitignore  Dockerfile-client  Dockerfile-fastapi  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: linting.yaml
alembic/: env.py
alembic/versions/: 2024_11_03_1747-e41e257bebad_create_tables.py  2024_11_03_1937-69ad2804148a_create_tables.py
src/: main.py
src/api/fastapi_views/: __init__.py  coin_info_view.py
src/api/orm/: orm_operation.py
src/core/: __init__.py  config.py  logging_config.py
src/core/models/: models.py
src/core/schemas/: schemas.py
src/http_client/: http_client.py  orm_operation.py
test/: test_http_client.py
